# BattleShipGame

./: .env  .gitignore  BattleShipDiagram.drawio  CMakeLists.txt  CPPLINT.cfg  Dockerfile  README.md  docker-compose.yml  message_status.h  server.env
.github/workflows/: build.yml  cd-pipeline.yml  cd-pipeline2.yml  ci-pipeline.yml  ci.yml  clang-tidy.yml  cmake.yml  dck.yml  deploy.yml  docker.yml  dockerhub.yml  gtests.yml  linter.yml  telegram_notification.yml
client/: CMakeLists.txt  audio_objects.cpp  audio_objects.h  battle_ship_game.cpp  battle_ship_game.h  config  config.cpp  config.h  game_field.cpp  game_field.h  game_field_cell.cpp  game_field_cell.h  main.cpp  screen_objects.cpp  screen_objects.h  ship.h  user.cpp  user.h
client/resources/: palette.aseprite  resources
client/resources/Aseprite/: Field.aseprite  Ship1.aseprite  Ship2.aseprite  Ship3.aseprite  Ship4.aseprite  Ship4_a.aseprite  book.aseprite  book1.aseprite  button.aseprite  button_.aseprite  gameMenu.aseprite  loginTable.aseprite  mainMenu.aseprite  opening.aseprite  rotating.aseprite
global/: message_status.h
server/: CMakeLists.txt  config  config.cpp  config.h  db_connection.cpp  db_connection.h  logger.cpp  logger.h  main.cpp
tests/: CMakeLists.txt  client_screen_oblects_tests.h  client_user_tests.h  main.cpp
